# canvas-to-excel-grades-automation

./: README.md  pyproject.toml
automate_grades/: .vscode  canvas_config.py  canvas_service.py  main.py  readme.md  set_up.py  sheets.py  sheets_config.py  sheets_service.py  utils.py  write_grades_logic.py
automate_grades/app/: app.py
src/: .gitignore  canvas_service.py  main.py  set_up.py  sheets.py  sheets_service.py  utils.py  write_grades_logic.py
